# Brain-ck-Interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  compile.sh  docker-build.sh  format-all.sh  install.sh  run.sh  test.sh
.github/workflows/: build.yml  test.yml
cmake/: BrainfckConfig.cmake.in
interpreter/: CMakeLists.txt  compiler.cpp  compiler.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  reader.cpp  reader.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp  utility.cpp  utility.hpp
interpreter/test/: CMakeLists.txt  parse_test.cpp
scripts/: mandelbrot.bf
